# AI_Scientist_V1

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PIPELINE.md
src/ai_scientist/: __init__.py  artifacts.py  cli.py  config.py  evidence_audit.py  execution.py  llm.py  orchestrator.py  program_validation.py  progress.py  prompts.py  provenance.py  quality.py  rendering.py  runtime.py  schemas.py  success_contract.py  trace_audit.py  validation.py  watchdog.py
src/ai_scientist/agents/: __init__.py  base.py  experiment.py  hypothesis.py  paper.py  planning.py  trace_audit.py
src/ai_scientist/prompt_text/: anchor_director.md  composer.md  contract_composer.md  contract_evaluator_a.md  contract_evaluator_b.md  direct_study_director.md  director.md  evaluator_a.md  evaluator_b.md  evidence_critic.md  evidence_global_audit.md  evidence_resolver.md  ex_evaluator.md  expansion_director.md  experiment_designer.md  experimentor.md  program_evaluator_a.md  program_evaluator_b.md  research_mode_director.md  research_program_composer.md  reviewer.md  trace_benchmark_curator.md  trace_fault_injector.md  writer.md
src/ai_scientist/workflows/: __init__.py  errors.py  (+6 more)
tests/: test_evaluator_evidence.py  test_evidence_audit.py  test_failure_rendering.py  test_hypothesis_preservation.py  test_operational_controls.py  test_orchestrator_e2e_mock.py  test_pipeline_hard_gates.py  test_quality.py  test_research_contract.py  test_research_program.py  test_schema.py  test_trace_audit.py  test_trace_external_review.py  test_validation.py
tools/: run_trace_external_review.py
